배당주 select 로직 추가 및 리팩토링