@@ -1,6 +1,6 @@
 package com.uj.stxtory.domain.dto.upbit;
 
-import com.uj.stxtory.domain.dto.deal.DealInfo;
+import com.uj.stxtory.domain.dto.deal.DealModel;
 import com.uj.stxtory.domain.dto.deal.DealItem;
 import com.uj.stxtory.domain.dto.deal.DealPrice;
 import java.util.List;
@@ -8,7 +8,7 @@ import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
-public class UPbitModel extends DealInfo {
+public class UPbitModel extends DealModel {
 
   int SEARCH_DAYS; // 6개월
 
@@ -20,11 +20,11 @@ public class UPbitModel extends DealInfo {
   public List<DealItem> getAll() {
     List<DealItem> coins = UPbitInfo.getAll();
     // 원화 기준만 취급
-    return coins.stream().filter(c -> c.getCode().contains("KRW")).collect(Collectors.toList());
+    return coins.stream().filter(c -> c.getCode().contains("KRW")).toList();
   }
 
   @Override
   public List<DealPrice> getPrice(DealItem item, int page) {
-    return UPbitInfo.getPriceInfoByDay(item.getCode(), SEARCH_DAYS);
+    return UPbitPriceInfo.getPriceInfoByDay(item.getCode(), SEARCH_DAYS);
   }
 }
